fixed product catalog spacing

--- a/css/ergonomica.css
+++ b/css/ergonomica.css
@@ -107,6 +107,8 @@
   -webkit-background-clip: text;
 }
 
+
+
 .masthead h2 {
   max-width: 20rem;
   font-size: 1rem;
@@ -133,6 +135,59 @@
     max-width: 30rem;
     font-size: 1.25rem;
   }
+}
+
+.floating-label-form-group {
+  position: relative;
+  border-bottom: 1px solid #e9ecef;
+}
+
+.floating-label-form-group input,
+.floating-label-form-group textarea {
+  font-size: 1em;
+  position: relative;
+  z-index: 1;
+  padding-right: 0;
+  padding-left: 0;
+  resize: none;
+  border: none;
+  border-radius: 0;
+  background: none;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+}
+
+.floating-label-form-group label {
+  font-size: 0.85em;
+  color: #cccccc;
+  line-height: 1em;
+  position: relative;
+  z-index: 0;
+  display: block;
+  margin: 0;
+  -webkit-transition: top 0.3s ease, opacity 0.3s ease;
+  transition: top 0.3s ease, opacity 0.3s ease;
+  vertical-align: middle;
+  vertical-align: baseline;
+  opacity: 0;
+}
+
+.floating-label-form-group:not(:first-child) {
+  padding-left: 14px;
+  border-left: 1px solid #e9ecef;
+}
+
+.floating-label-form-group-with-value label {
+  top: 0;
+  opacity: .8;
+}
+
+.floating-label-form-group-with-focus label {
+  color: #18BC9C;
+}
+
+form .row:first-child .floating-label-form-group {
+  border-top: 1px solid #e9ecef;
 }
 
 .btn {
@@ -171,16 +226,24 @@
 }
 
 .projects-section {
-  padding-left: 10rem 0;
-  padding-right: 10rem 0;
+  padding: 10rem 0;
 }
 
-.projects-section .featured-text {
+.project {
+}
+
+@media (max-width: 600px) {
+  .project {
+    margin-top: -2rem;
+  }
+}
+
+.aboutus .featured-text {
   padding: 2rem;
 }
 
 @media (min-width: 992px) {
-  .projects-section .featured-text {
+  .aboutus .featured-text {
     padding: 0 0 0 2rem;
     border-left: 0.5rem solid #64a19d;
   }
@@ -193,7 +256,7 @@
 
 @media (min-width: 992px) {
   .projects-section .project-text {
-    padding: 5rem;
+  
   }
   .projects-section .project-text hr {
     border-color: #64a19d;
@@ -219,6 +282,32 @@
   text-transform: uppercase;
   letter-spacing: 0.15rem;
   border: 0;
+}
+
+.social-row {
+  padding-top: 3%;
+  padding-bottom: 2%;
+}
+
+.social-icons a {
+  display: inline-block;
+  height: 3.5rem;
+  width: 3.5rem;
+  color: #1C08A0 !important;
+  border-radius: 100%;
+  text-align: center;
+  font-size: 1.5rem;
+  line-height: 3.5rem;
+  margin-right: 1rem;
+}
+
+.social-icons a:last-child {
+  margin-right: 0;
+}
+
+.social-icons a:hover {
+  background-color: #5308AB;
+  color: #fff ! important;
 }
 
 
